--- a/index.html
+++ b/index.html
@@ -32,9 +32,29 @@
         <h2>Sunset</h2>
       </div>
     </div>
+    <div class="slide">
+      <img src="/images/5.jpg">
+      <div class="info">
+        <h2>Tranquil Forest</h2>
+      </div>
+    </div>
+    <div class="slide">
+      <img src="/images/6.jpg">
+      <div class="info">
+        <h2>Autumn Night</h2>
+      </div>
+    </div>
     <div class="navigation">
       <i class="fas fa-chevron-left prev-btn"></i>
       <i class="fas fa-chevron-right next-btn"></i>
+    </div>
+    <div class="navigation-visability">
+      <div class="slide-icon"></div>
+      <div class="slide-icon"></div>
+      <div class="slide-icon"></div>
+      <div class="slide-icon"></div>
+      <div class="slide-icon"></div>
+      <div class="slide-icon"></div>
     </div>
   </div>
 </body>
