--- a/index.html
+++ b/index.html
@@ -8,38 +8,38 @@
 </head>
 <body>
   <div class="slider">
-    <div class="slide">
-      <img src="/images/1.jpg">
+    <div class="slide active">
+      <img id="slide-img" src="/images/1.jpg">
       <div class="info">
         <h2>Afternoon</h2>
       </div>
     </div>
     <div class="slide">
-      <img src="/images/2.jpg">
+      <img id="slide-img" src="/images/2.jpg">
       <div class="info">
         <h2>Morning</h2>
       </div>
     </div>
     <div class="slide">
-      <img src="/images/3.jpg">
+      <img id="slide-img" src="/images/3.jpg">
       <div class="info">
         <h2>Nature</h2>
       </div>
     </div>
     <div class="slide">
-      <img src="/images/4.jpg">
+      <img id="slide-img" src="/images/4.jpg">
       <div class="info">
         <h2>Sunset</h2>
       </div>
     </div>
     <div class="slide">
-      <img src="/images/5.jpg">
+      <img id="slide-img" src="/images/5.jpg">
       <div class="info">
         <h2>Tranquil Forest</h2>
       </div>
     </div>
     <div class="slide">
-      <img src="/images/6.jpg">
+      <img id="slide-img" src="/images/6.jpg">
       <div class="info">
         <h2>Autumn Night</h2>
       </div>
@@ -49,13 +49,18 @@
       <i class="fas fa-chevron-right next-btn"></i>
     </div>
     <div class="navigation-visability">
-      <div class="slide-icon"></div>
+      <div class="slide-icon active"></div>
       <div class="slide-icon"></div>
       <div class="slide-icon"></div>
       <div class="slide-icon"></div>
       <div class="slide-icon"></div>
       <div class="slide-icon"></div>
     </div>
+    <div class="control-btns">
+      <button onclick="autoplay()">Autoplay</button>
+      <button onclick="showRandom()">Random</button>
+    </div>
   </div>
+  <script src="main.js"></script>
 </body>
 </html>
