--- a/index.html
+++ b/index.html
@@ -1,66 +1,69 @@
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Image Slider</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
-</head>
-<body>
-  <div class="slider">
-    <div class="slide active">
-      <img id="slide-img" src="/images/1.jpg">
-      <div class="info">
-        <h2>Afternoon</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Image Slider</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+  </head>
+  <body>
+    <div class="slider">
+      <div class="slide active">
+        <img id="slide-img" src="/images/1.jpg" />
+        <div class="info">
+          <h2>Afternoon</h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img id="slide-img" src="/images/2.jpg" />
+        <div class="info">
+          <h2>Morning</h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img id="slide-img" src="/images/3.jpg" />
+        <div class="info">
+          <h2>Nature</h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img id="slide-img" src="/images/4.jpg" />
+        <div class="info">
+          <h2>Sunset</h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img id="slide-img" src="/images/5.jpg" />
+        <div class="info">
+          <h2>Tranquil Forest</h2>
+        </div>
+      </div>
+      <div class="slide">
+        <img id="slide-img" src="/images/6.jpg" />
+        <div class="info">
+          <h2>Autumn Night</h2>
+        </div>
+      </div>
+      <div class="navigation">
+        <i class="fas fa-chevron-left prev-btn"></i>
+        <i class="fas fa-chevron-right next-btn"></i>
+      </div>
+      <div class="navigation-visability">
+        <div class="slide-icon active"></div>
+        <div class="slide-icon"></div>
+        <div class="slide-icon"></div>
+        <div class="slide-icon"></div>
+        <div class="slide-icon"></div>
+        <div class="slide-icon"></div>
+      </div>
+      <div class="control-btns">
+        <button onclick="autoplay()">Autoplay</button>
+        <button onclick="showRandom()">Random</button>
       </div>
     </div>
-    <div class="slide">
-      <img id="slide-img" src="/images/2.jpg">
-      <div class="info">
-        <h2>Morning</h2>
-      </div>
-    </div>
-    <div class="slide">
-      <img id="slide-img" src="/images/3.jpg">
-      <div class="info">
-        <h2>Nature</h2>
-      </div>
-    </div>
-    <div class="slide">
-      <img id="slide-img" src="/images/4.jpg">
-      <div class="info">
-        <h2>Sunset</h2>
-      </div>
-    </div>
-    <div class="slide">
-      <img id="slide-img" src="/images/5.jpg">
-      <div class="info">
-        <h2>Tranquil Forest</h2>
-      </div>
-    </div>
-    <div class="slide">
-      <img id="slide-img" src="/images/6.jpg">
-      <div class="info">
-        <h2>Autumn Night</h2>
-      </div>
-    </div>
-    <div class="navigation">
-      <i class="fas fa-chevron-left prev-btn"></i>
-      <i class="fas fa-chevron-right next-btn"></i>
-    </div>
-    <div class="navigation-visability">
-      <div class="slide-icon active"></div>
-      <div class="slide-icon"></div>
-      <div class="slide-icon"></div>
-      <div class="slide-icon"></div>
-      <div class="slide-icon"></div>
-      <div class="slide-icon"></div>
-    </div>
-    <div class="control-btns">
-      <button onclick="autoplay()">Autoplay</button>
-      <button onclick="showRandom()">Random</button>
-    </div>
-  </div>
-  <script src="main.js"></script>
-</body>
+    <script src="main.js"></script>
+  </body>
 </html>
