Add Images descriptions from an api

--- a/index.html
+++ b/index.html
@@ -14,37 +14,43 @@
       <div class="slide active">
         <img id="slide-img" src="/images/1.jpg" />
         <div class="info">
-          <h2>Afternoon</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="slide">
         <img id="slide-img" src="/images/2.jpg" />
         <div class="info">
-          <h2>Morning</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="slide">
         <img id="slide-img" src="/images/3.jpg" />
         <div class="info">
-          <h2>Nature</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="slide">
         <img id="slide-img" src="/images/4.jpg" />
         <div class="info">
-          <h2>Sunset</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="slide">
         <img id="slide-img" src="/images/5.jpg" />
         <div class="info">
-          <h2>Tranquil Forest</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="slide">
         <img id="slide-img" src="/images/6.jpg" />
         <div class="info">
-          <h2>Autumn Night</h2>
+          <h2 class="title"></h2>
+          <p class="description"></p>
         </div>
       </div>
       <div class="navigation">
